--- a/blocks/content.css
+++ b/blocks/content.css
@@ -2,6 +2,7 @@
   margin: 0 auto;
   padding: 0 40px;
   max-width: 1280px;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 320px) {
